# fimpad

./: .codexignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  NOTES.md  README.md  TAG_SPEC.md  Tag Spec.md  fimpad.spec  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: FIMpad Shortcuts.md  FIMpad Themes.md
fimpad/: __main__.py  app.py  bol_utils.py  client.py  config.py  example_resources.py  help.py  icons.py  library_resources.py  parser.py  stream_utils.py  utils.py
fimpad/data/: __init__.py  help_tab_template.txt
fimpad/examples/: Beginner Example.txt  List 12.txt  quickstart.md  welcome.txt
fimpad/resources/: __init__.py
fimpad/ui/: file_dialogs.py  helpers.py  menus.py
tests/: test_app_cursor_offset.py  test_bol_helpers.py  test_chat_aliases.py  test_cli.py  test_client.py  test_config.py  test_cursor_span.py  test_delete_shortcut_focus.py  test_file_dialogs.py  test_fim_log.py  test_help_template.py  test_library_resources.py  test_marker_regex.py  test_parser.py  test_save_file.py  test_smoke.py  test_spellcheck_contractions.py  test_stream_mark.py  test_stream_patterns.py  test_utils.py
